# sillystrings

./: .gitignore  README.md  pyproject.toml  sillystrings-plan.md
scripts/: make_fixtures.py
src/sillystrings/: __init__.py  __version__.py  cli.py  encodings.py  scanner.py
tests/: conftest.py  test_cli.py  test_encodings.py  test_scanner.py
